# dsh

./: README.md
dsh/: Makefile.in  TODO  aclocal.m4  config.h.in  configure  dsh.1  dsh.c  dsh.conf  parameter.c  parameter.h
dsh/m4/: Makefile.in
dsh/po/: ja.gmo
libdshconfig/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  libdshconfig.c  libdshconfig.h  libdshconfig.spec  test-dshconfig-searchdata.c
libdshconfig/tests/: test-basic.input  test-basic.output  test-basic.sh  test-dshconfig-searchdata.data  test-dshconfig-searchdata.sh  test-longline.sh
